Bug 327447 - scaling it not locked in x/y when doing it manually
Summary: scaling it not locked in x/y when doing it manually
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Transform (other bugs)
Version First Reported In: 2.8 Pre-Alpha
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-11 13:17 UTC by alexcppns
Modified: 2019-09-05 08:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description alexcppns 2013-11-11 13:17:59 UTC
If you select a box and use the transform tool, then scale it by hand (not editing the number). The  proportion lock is bypassed

Reproducible: Always

Steps to Reproduce:
1. select a box with a visible image in it
2. use transform tool
3. scale by hand
Actual Results:  
No proportion constraint

Expected Results:  
Proportion constraint.
Comment 1 Halla Rempt 2013-11-15 09:50:07 UTC
Hi Alex, thanks for your report. I can confirm the issue. At the moment, you need to keep shift pressed to constain the proportions when changing the size by dragging on one of the corners, but the lock in the tool options docker should do that, too.
Comment 2 Dmitry Kazakov 2013-12-02 12:29:29 UTC
Git commit 210ab4c87f844e420a9fe6f460d4cb2d66e6db7c by Dmitry Kazakov.
Committed on 02/12/2013 at 12:29.
Pushed by dkazakov into branch 'master'.

Fix Keep Aspect Ratio for KisToolTransform

There are two changes currently:
1) Shift modifier now "flips" current AspectRation setting,
   not just enables
2) Default Value is "Disabled"

M  +9    -3    krita/plugins/tools/tool_transform2/kis_tool_transform.cc
M  +2    -2    krita/plugins/tools/tool_transform2/tool_transform_args.cc

http://commits.kde.org/calligra/210ab4c87f844e420a9fe6f460d4cb2d66e6db7c
Comment 3 Dmitry Kazakov 2013-12-02 12:30:04 UTC
Git commit ddfe7572a1f5439f32e456d4f46a4d5626cf8e5b by Dmitry Kazakov.
Committed on 02/12/2013 at 12:29.
Pushed by dkazakov into branch 'calligra/2.8'.

Fix Keep Aspect Ratio for KisToolTransform

There are two changes currently:
1) Shift modifier now "flips" current AspectRation setting,
   not just enables
2) Default Value is "Disabled"

M  +9    -3    krita/plugins/tools/tool_transform2/kis_tool_transform.cc
M  +2    -2    krita/plugins/tools/tool_transform2/tool_transform_args.cc

http://commits.kde.org/calligra/ddfe7572a1f5439f32e456d4f46a4d5626cf8e5b