Fix Keep Aspect Ratio for KisToolTransform

There are two changes currently:
1) Shift modifier now "flips" current AspectRation setting,
   not just enables
2) Default Value is "Disabled"

BUG:327447